--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -27,13 +27,13 @@
   "homepage": "https://github.com/polkadot-js/api/tree/master/packages/api#readme",
   "dependencies": {
     "@babel/runtime": "^7.10.3",
+    "@chainx-v2/types-known": "1.22.0-beta.3",
     "@polkadot/api-derive": "1.22.0-beta.3",
     "@polkadot/keyring": "^2.15.1",
     "@polkadot/metadata": "1.22.0-beta.3",
     "@polkadot/rpc-core": "1.22.0-beta.3",
     "@polkadot/rpc-provider": "1.22.0-beta.3",
     "@polkadot/types": "1.22.0-beta.3",
-    "@polkadot/types-known": "1.22.0-beta.3",
     "@polkadot/util": "^2.15.1",
     "@polkadot/util-crypto": "^2.15.1",
     "bn.js": "^5.1.2",
