--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,8 @@
       "@polkadot/rpc-provider/*": ["packages/rpc-provider/src/*"],
       "@polkadot/types": ["packages/types/src"],
       "@polkadot/types/*": ["packages/types/src/*"],
-      "@polkadot/types-known": ["packages/types-known/src"],
-      "@polkadot/types-known/*": ["packages/types-known/src/*"]
+      "@chainx-v2/types-known": ["packages/types-known/src"],
+      "@chainx-v2/types-known/*": ["packages/types-known/src/*"]
     },
     "skipLibCheck": true,
     "typeRoots": [
