--- a/packages/api-derive/package.json
+++ b/packages/api-derive/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@babel/runtime": "^7.10.3",
     "@polkadot/api": "1.22.0-beta.3",
-    "@polkadot/rpc-core": "1.22.0-beta.3",
+    "@chainx-v2/rpc-core": "1.22.0-beta.3",
     "@polkadot/rpc-provider": "1.22.0-beta.3",
     "@polkadot/types": "1.22.0-beta.3",
     "@polkadot/util": "^2.15.1",
