--- a/packages/rpc-core/package.json
+++ b/packages/rpc-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@polkadot/rpc-core",
+  "name": "@chainx-v2/rpc-core",
   "version": "1.22.0-beta.3",
   "description": "A JavaScript wrapper for the Polkadot JsonRPC interface",
   "main": "index.js",
