--- a/packages/api-contract/package.json
+++ b/packages/api-contract/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@polkadot/api-contract",
+  "name": "@chainx-v2/api-contract",
   "version": "1.22.0-beta.3",
   "description": "Interfaces for interacting with contracts and contract ABIs",
   "main": "index.js",
