--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "yarn build:interfaces && node ./scripts/dev-build-ts.js && (cd packages/typegen && copyfiles scripts/* build)",
     "build:interfaces": "polkadot-types-internal-interfaces",
-    "build:release": "polkadot-ci-ghact-build",
+    "build:release": " node ./scripts/chainx-build-release.js",
     "docs": "polkadot-types-internal-metadata && polkadot-dev-build-docs",
     "docs:release": "polkadot-ci-ghact-docs",
     "chain:info": "polkadot-types-chain-info",
@@ -35,5 +35,5 @@
     "@vuepress/plugin-search": "^1.5.2",
     "copyfiles": "^2.3.0"
   },
-  "version": "0.0.1-beta.8"
+  "version": "0.0.1-beta.9"
 }
