--- a/packages/rpc-core/package.json
+++ b/packages/rpc-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/rpc-core",
-  "version": "0.0.1-beta.16",
+  "version": "0.0.2-beta",
   "description": "A JavaScript wrapper for the Polkadot JsonRPC interface",
   "main": "index.js",
   "keywords": [
