--- a/packages/rpc-provider/package.json
+++ b/packages/rpc-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/rpc-provider",
-  "version": "0.0.1-beta.16",
+  "version": "0.0.2-beta",
   "description": "Transport providers for the API",
   "main": "index.js",
   "keywords": [
