--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/types",
-  "version": "0.0.1-beta.16",
+  "version": "0.0.2-beta",
   "description": "Implementation of the Parity codec",
   "main": "index.js",
   "keywords": [
