--- a/packages/account/package.json
+++ b/packages/account/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/account",
-  "version": "0.0.3-beta",
+  "version": "0.0.3-beta.3",
   "main": "index.js",
   "dependencies": {
     "@chainx/keyring": "^2.22.31",
