--- a/packages/api-contract/package.json
+++ b/packages/api-contract/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/api-contract",
-  "version": "0.0.3-beta",
+  "version": "0.0.3-beta.3",
   "description": "Interfaces for interacting with contracts and contract ABIs",
   "main": "index.js",
   "keywords": [
