--- a/docs/examples/promise/01_simple_connect/package.json
+++ b/docs/examples/promise/01_simple_connect/package.json
@@ -10,8 +10,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@chainx-v2/api": "0.0.2-beta",
-    "@chainx-v2/account": "0.0.2-beta"
+    "@chainx-v2/api": "0.0.3-beta.3",
+    "@chainx-v2/account": "0.0.3-beta.3"
   },
   "devDependencies": {
     "rimraf": "^2.6.2"
