--- a/packages/api-derive/package.json
+++ b/packages/api-derive/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@chainx-v2/api-derive",
-  "version": "0.0.3-beta.16",
+  "version": "0.0.3-beta.17",
   "description": "Common functions used across Polkadot, derived from RPC calls and storage queries.",
   "main": "index.js",
   "dependencies": {
     "@babel/runtime": "^7.10.3",
-    "@chainx-v2/api": "0.0.1-beta.16",
-    "@chainx-v2/rpc-core": "0.0.1-beta.16",
-    "@chainx-v2/rpc-provider": "0.0.1-beta.16",
-    "@chainx-v2/types": "0.0.1-beta.16",
+    "@chainx-v2/api": "^0.0.3-beta.16",
+    "@chainx-v2/rpc-core": "^0.0.3-beta.16",
+    "@chainx-v2/rpc-provider": "^0.0.3-beta.16",
+    "@chainx-v2/types": "^0.0.3-beta.16",
     "@polkadot/util": "^2.15.1",
     "@polkadot/util-crypto": "^2.15.1",
     "bn.js": "^5.1.2",
@@ -16,6 +16,6 @@
     "rxjs": "^6.5.5"
   },
   "devDependencies": {
-    "@chainx-v2/keyring": "0.0.3-beta.16"
+    "@chainx-v2/keyring": "0.0.3-beta.17"
   }
 }
