--- a/packages/rpc-provider/package.json
+++ b/packages/rpc-provider/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@chainx-v2/rpc-provider",
-  "version": "0.0.3-beta.16",
+  "version": "0.0.3-beta.17",
   "description": "Transport providers for the API",
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
     "@babel/runtime": "^7.10.3",
-    "@chainx-v2/metadata": "0.0.1-beta.16",
-    "@chainx-v2/types": "0.0.1-beta.16",
+    "@chainx-v2/metadata": "^0.0.3-beta.16",
+    "@chainx-v2/types": "^0.0.3-beta.16",
     "@polkadot/util": "^2.15.1",
     "@polkadot/util-crypto": "^2.15.1",
     "bn.js": "^5.1.2",
@@ -16,7 +16,7 @@
     "websocket": "^1.0.31"
   },
   "devDependencies": {
-    "@chainx-v2/keyring": "0.0.3-beta.16",
+    "@chainx-v2/keyring": "0.0.3-beta.17",
     "mock-socket": "^9.0.3",
     "nock": "^12.0.3"
   }
