--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@chainx-v2/types",
-  "version": "0.0.3-beta.16",
+  "version": "0.0.3-beta.17",
   "description": "Implementation of the Parity codec",
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
     "@babel/runtime": "^7.10.3",
-    "@chainx-v2/metadata": "0.0.1-beta.16",
+    "@chainx-v2/metadata": "^0.0.3-beta.16",
     "@polkadot/util": "^2.15.1",
     "@polkadot/util-crypto": "^2.15.1",
     "@types/bn.js": "^4.11.6",
@@ -15,7 +15,7 @@
     "rxjs": "^6.5.5"
   },
   "devDependencies": {
-    "@chainx-v2/keyring": "0.0.3-beta.16",
+    "@chainx-v2/keyring": "0.0.3-beta.17",
     "@types/memoizee": "^0.4.4"
   }
 }
