--- a/packages/account/package.json
+++ b/packages/account/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@chainx-v2/account",
-  "version": "0.0.3-beta.17",
+  "version": "0.0.3-beta.18",
   "main": "index.js",
   "dependencies": {
-    "@chainx-v2/keyring": "^0.0.3-beta.17",
+    "@chainx-v2/keyring": "0.0.3-beta.18",
     "@types/node": "^14.0.23",
     "bip32": "^1.0.2",
     "bs58": "^4.0.1",
