--- a/packages/rpc-core/package.json
+++ b/packages/rpc-core/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@chainx-v2/rpc-core",
-  "version": "0.0.3-beta.17",
+  "version": "0.0.3-beta.18",
   "description": "A JavaScript wrapper for the Polkadot JsonRPC interface",
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
     "@babel/runtime": "^7.10.3",
-    "@chainx-v2/metadata": "^0.0.3-beta.16",
-    "@chainx-v2/rpc-provider": "^0.0.3-beta.16",
-    "@chainx-v2/types": "^0.0.3-beta.16",
-    "@chainx-v2/util": "^0.0.3-beta.16",
+    "@chainx-v2/metadata": "0.0.3-beta.18",
+    "@chainx-v2/rpc-provider": "0.0.3-beta.18",
+    "@chainx-v2/types": "0.0.3-beta.18",
+    "@chainx-v2/util": "0.0.3-beta.18",
     "memoizee": "^0.4.14",
     "rxjs": "^6.5.5"
   },
   "devDependencies": {
-    "@chainx-v2/keyring": "0.0.3-beta.17"
+    "@chainx-v2/keyring": "0.0.3-beta.18"
   }
 }
