--- a/packages/rpc-provider/package.json
+++ b/packages/rpc-provider/package.json
@@ -1,22 +1,22 @@
 {
   "name": "@chainx-v2/rpc-provider",
-  "version": "0.0.3-beta.17",
+  "version": "0.0.3-beta.18",
   "description": "Transport providers for the API",
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
     "@babel/runtime": "^7.10.3",
-    "@chainx-v2/crypto": "^0.0.3-beta.16",
-    "@chainx-v2/metadata": "^0.0.3-beta.16",
-    "@chainx-v2/types": "^0.0.3-beta.16",
-    "@chainx-v2/util": "^0.0.3-beta.16",
+    "@chainx-v2/crypto": "0.0.3-beta.18",
+    "@chainx-v2/metadata": "0.0.3-beta.18",
+    "@chainx-v2/types": "0.0.3-beta.18",
+    "@chainx-v2/util": "0.0.3-beta.18",
     "bn.js": "^5.1.2",
     "eventemitter3": "^4.0.4",
     "isomorphic-fetch": "^2.2.1",
     "websocket": "^1.0.31"
   },
   "devDependencies": {
-    "@chainx-v2/keyring": "0.0.3-beta.17",
+    "@chainx-v2/keyring": "0.0.3-beta.18",
     "mock-socket": "^9.0.3",
     "nock": "^12.0.3"
   }
