--- a/packages/types-known/package.json
+++ b/packages/types-known/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@chainx-v2/types-known",
-  "version": "0.0.3-beta.17",
+  "version": "0.0.3-beta.18",
   "description": "A JavaScript wrapper for the Polkadot JsonRPC interface",
   "main": "index.js",
   "dependencies": {
     "@babel/runtime": "^7.10.3",
-    "@chainx-v2/types": "^0.0.3-beta.16",
-    "@chainx-v2/util": "^0.0.3-beta.16",
+    "@chainx-v2/types": "0.0.3-beta.18",
+    "@chainx-v2/util": "0.0.3-beta.18",
     "bn.js": "^5.1.2"
   },
   "devDependencies": {
