--- a/docs/examples/promise/01_simple_connect/package.json
+++ b/docs/examples/promise/01_simple_connect/package.json
@@ -10,9 +10,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@chainx-v2/api": "0.0.3-beta.20",
-    "@chainx-v2/account": "0.0.3-beta.20",
-    "@chainx-v2/keyring": "0.0.3-beta.20"
+    "@chainx-v2/api": "^0.0.3-beta.22",
+    "@chainx-v2/account": "^0.0.3-beta.22",
+    "@chainx-v2/keyring": "^0.0.3-beta.22"
   },
   "devDependencies": {
     "rimraf": "^2.6.2"
