--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/util",
-  "version": "0.0.3-beta.26",
+  "version": "0.0.4-beta",
   "description": "",
   "main": "index.js",
   "contributors": [],
