--- a/packages/account/package.json
+++ b/packages/account/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/account",
-  "version": "0.0.3-beta.26",
+  "version": "0.0.4-beta",
   "main": "index.js",
   "dependencies": {
     "@chainx-v2/keyring": "0.0.3-beta.26",
