--- a/packages/api-contract/package.json
+++ b/packages/api-contract/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/api-contract",
-  "version": "0.0.3-beta.26",
+  "version": "0.0.4-beta",
   "description": "Interfaces for interacting with contracts and contract ABIs",
   "main": "index.js",
   "license": "Apache-2.0",
