--- a/packages/api-derive/package.json
+++ b/packages/api-derive/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/api-derive",
-  "version": "0.0.3-beta.26",
+  "version": "0.0.4-beta",
   "description": "Common functions used across Polkadot, derived from RPC calls and storage queries.",
   "main": "index.js",
   "dependencies": {
