--- a/packages/metadata/package.json
+++ b/packages/metadata/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/metadata",
-  "version": "0.0.3-beta.26",
+  "version": "0.0.4-beta",
   "description": "Helpers to extract information from runtime metadata",
   "main": "index.js",
   "license": "Apache-2.0",
