--- a/packages/rpc-core/package.json
+++ b/packages/rpc-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/rpc-core",
-  "version": "0.0.4-beta",
+  "version": "0.0.4-beta.2",
   "description": "A JavaScript wrapper for the Polkadot JsonRPC interface",
   "main": "index.js",
   "license": "Apache-2.0",
