--- a/docs/examples/promise/06_make_transfer/package.json
+++ b/docs/examples/promise/06_make_transfer/package.json
@@ -10,7 +10,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@chainx-v2/api": "*"
+    "@polkadot/api": "*"
   },
   "devDependencies": {
     "rimraf": "^2.6.2"
