--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/crypto",
-  "version": "0.0.9.beta",
+  "version": "0.0.9.beta.1",
   "description": "A collection of useful crypto utilities for @chainx-v2",
   "main": "index.js",
   "license": "Apache-2.0",
