--- a/packages/keyring/package.json
+++ b/packages/keyring/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/keyring",
-  "version": "0.0.9.beta",
+  "version": "0.0.9.beta.1",
   "description": "Keyring management",
   "main": "index.js",
   "license": "Apache-2.0",
