--- a/packages/typegen/package.json
+++ b/packages/typegen/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/typegen",
-  "version": "0.0.9.beta",
+  "version": "0.0.9.beta.1",
   "description": "Type generation scripts",
   "main": "index.js",
   "bin": {
