--- a/packages/types-known/package.json
+++ b/packages/types-known/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/types-known",
-  "version": "0.0.9.beta",
+  "version": "0.0.9.beta.1",
   "description": "A JavaScript wrapper for the Polkadot JsonRPC interface",
   "main": "index.js",
   "dependencies": {
