--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/types",
-  "version": "0.0.9.beta",
+  "version": "0.0.9.beta.1",
   "description": "Implementation of the Parity codec",
   "main": "index.js",
   "license": "Apache-2.0",
