--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chainx-v2/util",
-  "version": "0.0.9.beta.1",
+  "version": "0.0.10",
   "description": "",
   "main": "index.js",
   "contributors": [],
